Entrainement_HTML_CSS

--- a/index.html
+++ b/index.html
@@ -35,35 +35,57 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <h1>Mon parcours</h1>
-        <div class="row">
-            <div class="col">
-                <div class="annee">2015</div>
-                <div class="parcours">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Repudiandae vero soluta nemo? Porro praesentium soluta recusandae nemo quam vitae veniam, 
-                    aut eos exercitationem explicabo quas aliquid dolores consequuntur ipsum aperiam.</div>
-            </div>
-            <div class="col">
-                <div class="annee">2017 - 2018</div>
-                <div class="parcours">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Repudiandae vero soluta nemo? Porro praesentium soluta recusandae nemo quam vitae veniam, 
-                    aut eos exercitationem explicabo quas aliquid dolores consequuntur ipsum aperiam.</div>
-            </div>
-            <div class="col">
-                <div class="annee">2018 - 2020</div>
-                <div class="parcours">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Repudiandae vero soluta nemo? Porro praesentium soluta recusandae nemo quam vitae veniam, 
-                    aut eos exercitationem explicabo quas aliquid dolores consequuntur ipsum aperiam.</div>
-            </div>
-            <div class="col">
-                <div class="annee">2021 - 2022</div>
-                <div class="parcours">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Repudiandae vero soluta nemo? Porro praesentium soluta recusandae nemo quam vitae veniam, 
-                    aut eos exercitationem explicabo quas aliquid dolores consequuntur ipsum aperiam.</div>
-            </div>
+    <h1>Mon parcours</h1>
+    <div class="choice">
+        <div></div>
+        <div>
+            <button id="button_scolar" class="choice">Scolaire</button> <a class="choice"> - </a> <button id="button_pro" class="choice">Professionel</a>
         </div>
     </div>
+    <div class="my_journey">
+        <div id="table_scolar"> 
+            <div class="card">
+                <div class="year">Juin 2015</div>
+                <div class="description">
+                    <h3>Baccalauréat général série scientifique (S-SVT) - <a href="https://goo.gl/maps/r3N6g2fwoByHPowz5">Lycée André Lurçat</a></h3>
+                    <span class="desc_journey">Spécialité Mathématique, option L.V. 3 Néerlandais</span>  <img class="flag" src="img/nl.svg" alt="nl" width="20px"> 
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="year">Septembre 2015</div>
+                <div class="description">
+                    <h3>Entrée en licence informatique - <a href="https://goo.gl/maps/fztPaWijLn3FexAT6">Université polytechnique des hauts de France</a></h3>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="year">Septembre 2017</div>
+                <div class="description">
+                    <h3>Année sabbatique <img src="img/" alt=""></h3>
+                    <span class="desc_journey">Passage à temps plein tenter l'experience vers le professionnalisme de counter-strike</span>
+                </div>
+                <div class="year">Juillet 2018</div>
+            </div>
+
+            <div class="card">
+                <div class="year">Septembre 2018</div>
+                    <div class="description">
+                        <h3>Retour à la fac d'informatique</h3>
+                    </div>
+            </div>
+
+            <div class="card">
+                <div class="year">Juillet 2020</div>
+                    <div class="description">
+                        <h3>Obtention de ma licence en informatique <img src="img/student-svgrepo-com.svg" width="20px" alt=""></h3>
+                    </div>
+            </div>
+        </div>
+        <h1 id="table_pro"> TABLEAU PRO INSHALLAH</h1>
+    </div>
     
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
