--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,12 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <a class="button_menu">A propos de moi</a>
-        <a class="button_menu">Mon parcours</a>
-        <a class="button_menu">Mes projets</a>
-        <a class="button_menu">Gallerie</a>
-        <a class="button_menu">Me contacter</a>
+        <a class="button_menu" href="#about_me">A propos de moi</a>
+        <a class="button_menu" href="#my_journey">Mon parcours</a>
+        <a class="button_menu" href="#my_projects">Mes projets</a>
     </nav>
-    <h1>A propos de moi</h1>
-    <div class="about_me">
+    <h1 id="about_me">A propos de moi</h1>
+    <div class="about_me" >
         <div class="row_about_me">
             <div class="col-photo"><img src="img/FWNeL6iX0AM_QsI.jpg" height="600" alt="Mhilan devant une fontaine de plovdiv"></div>
             <div class="presentation">
@@ -35,8 +33,8 @@
             </div>
         </div>
     </div>
-    <h1>Mon parcours</h1>
-    <div class="my_journey" id="my_journey">
+    <h1 id="my_journey">Mon parcours</h1>
+    <div class="my_journey">
         <div class="timeline">
             <div class="container left">
                 <div class="content">
@@ -124,7 +122,7 @@
         </div>
     </div>
 
-    <h1>Mes projets</h1>
+    <h1 id="my_projects">Mes projets</h1>
     
         <div class="projects">
                 <div class="each_project">
@@ -168,10 +166,8 @@
                     </p>
                 </div>
         </div>
-
-        <h1>Me contacter</h1>
         <div class="footer">
-            <a>Designed and created by mLn</a>
+            <a class="design">Designed and created by mLn</a>
             <a href="https://www.github.com/mLn023"><svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#0077B5" fill-rule="evenodd" d="M22.0367422,22 L17.8848745,22 L17.8848745,15.5036305 C17.8848745,13.9543347 17.85863,11.9615082 15.7275829,11.9615082 C13.5676669,11.9615082 13.237862,13.6498994 13.237862,15.3925291 L13.237862,22 L9.0903683,22 L9.0903683,8.64071385 L13.0707725,8.64071385 L13.0707725,10.4673257 L13.1276354,10.4673257 C13.6813927,9.41667396 15.0356049,8.3091593 17.0555507,8.3091593 C21.2599073,8.3091593 22.0367422,11.0753215 22.0367422,14.6734319 L22.0367422,22 Z M4.40923804,6.81585163 C3.07514653,6.81585163 2,5.73720584 2,4.40748841 C2,3.07864579 3.07514653,2 4.40923804,2 C5.73720584,2 6.81585163,3.07864579 6.81585163,4.40748841 C6.81585163,5.73720584 5.73720584,6.81585163 4.40923804,6.81585163 L4.40923804,6.81585163 Z M6.48604672,22 L2.32980492,22 L2.32980492,8.64071385 L6.48604672,8.64071385 L6.48604672,22 Z"/>
               </svg></a>
